--- a/hackme/src/main/webapp/search.html
+++ b/hackme/src/main/webapp/search.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<form action = "/WebApplication/search">
+	<form action = "hackme">
 	Search for anything<input type="text" name="item" />
 	<input type="submit" />
 	</form>
